--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -56,3 +56,31 @@
     color: white;
     cursor: pointer;
 }
+
+main {
+    height: 900px;
+}
+
+#footer-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 15vh;
+    background-color: black;
+}
+
+.social-icons {
+  margin-top: 10px;
+}
+
+.social-icons a {
+  color: white;
+  margin: 0 10px;
+  font-size: 24px;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: #00aced; /* muda a cor ao passar o mouse */
+}
